--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,16 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Montserrat', sans-serif;
-	/*height: 1500px;*/
+	height: 15000px;
+}
+span
+{
+	color:#18ffff;
+}
+p
+{
+	text-align: justify;
+	font-size: 12px;
 }
 
 
@@ -38,4 +47,46 @@ body {
 .card-body
 {
 	text-align: center;
+	box-shadow: 10px 10px 5px grey;
+}
+.animation
+{
+	animation-iteration-count: 1;
+	animation-duration: 3s;
+}
+
+.feed-news
+{
+	padding: 20px 20px 20px 0px;
+}
+.list-article-meta
+{
+    font-size: 15px;
+    color: #777777;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+    margin-bottom: 10px;
+    padding-bottom: 30px;
+}
+a
+{
+	color: #67DDFF;
+}
+.modalss
+{
+	float: right;
+}
+.feed-title
+{
+	/*margin-top: 10px;*/
+	margin-bottom: 70px;
+	padding-bottom: 50px;
+	text-align: center;
+	font-size: 40px;
+	letter-spacing: 3.5px;
+	font-weight: 800;
+	position: relative;
+	margin-bottom: 0px;
+	text-transform: uppercase;
 }
