--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,13 @@
-/*
-	 We are clearing the body's margin and padding, so that the header fits properly.
-	 We are also adding a height to demonstrate the scrolling behavior. You can remove
-	 these styles.
- */
 body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Montserrat', sans-serif;
-	height: 15000px;
 }
-span
+a
 {
-	color:#18ffff;
+	text-decoration: none;
 }
+
 p
 {
 	text-align: justify;
@@ -20,23 +15,27 @@ p
 }
 
 
-.section-title
+.section-title,
+.feed-title,
+.support-title,
+.testimonial
 {
-	margin-top: 50px;
-	margin-bottom: 70px;
-	padding-bottom: 50px;
+	margin-top: 20px;
+	margin-bottom: 30px;
+	/*padding-bottom: 100px;*/
 	text-align: center;
 	font-size: 40px;
 	letter-spacing: 3.5px;
-	font-weight: 800;
+	/*font-weight: 800;*/
 	position: relative;
-	margin-bottom: 0px;
 	text-transform: uppercase;
 }
+
 
 .service-title
 {
 	text-align: center;
+	color: #67DDFF;
 }
 
 .card-text
@@ -49,16 +48,11 @@ p
 	text-align: center;
 	box-shadow: 10px 10px 5px grey;
 }
-.animation
-{
-	animation-iteration-count: 1;
-	animation-duration: 3s;
-}
 
-.feed-news
+/*.feed-news
 {
 	padding: 20px 20px 20px 0px;
-}
+}*/
 .list-article-meta
 {
     font-size: 15px;
@@ -66,27 +60,128 @@ p
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 1.2px;
-    margin-bottom: 10px;
-    padding-bottom: 30px;
+
 }
-a
-{
-	color: #67DDFF;
-}
-.modalss
+
+.modal-panel
 {
 	float: right;
 }
-.feed-title
+
+hr.style18 { 
+  height: 30px; 
+  border-style: solid; 
+  border-color: #8c8b8b; 
+  border-width: 1px 0 0 0; 
+  border-radius: 20px; 
+} 
+hr.style18:before { 
+  display: block; 
+  content: ""; 
+  height: 30px; 
+  margin-top: -31px; 
+  border-style: solid; 
+  border-color: #8c8b8b; 
+  border-width: 0 0 1px 0; 
+  border-radius: 20px; 
+}
+
+.all-feed
 {
-	/*margin-top: 10px;*/
-	margin-bottom: 70px;
-	padding-bottom: 50px;
 	text-align: center;
-	font-size: 40px;
-	letter-spacing: 3.5px;
-	font-weight: 800;
-	position: relative;
-	margin-bottom: 0px;
-	text-transform: uppercase;
+	margin-top: 40px;
+	display: block;
+	border: 3px, solid, #8c8b8b;
+}
+/*Testimonial Part*/
+.carousel-inner img {
+    width: 100%;
+    max-height: 460px;
+    background-color: #000;
+}
+.header-text {
+    position: absolute;
+    top: 20%;
+    left: 1.8%;
+    right: auto;
+    width: 100%;
+    color: #fff;
+}
+.header-text h2 {
+    font-size: 20px;
+}
+
+.header-text h2 span {
+    /*background-color: #2980b9;*/
+  padding: 10px;
+}
+.header-text h3 span {
+  background-color: #000;
+  padding: 15px;
+}
+/*Testimonial Part ends*/
+
+
+/* Footer Starts */
+footer {
+  background: #373737;
+  margin-top: auto;
+  width: 100%;
+  font-size: inherit;
+}
+#sub
+{
+  background-color: #373737;
+  border-color: #373737;
+}
+#icon
+{
+  color: #fff;
+}
+
+.social-connect
+{
+  width: 100%;
+  position: relative;
+  margin-top: 10px; 
+  justify-content: space-around;
+}
+.footer-social-overlap
+{
+  position: relative;
+  z-index: 2;
+  background: #373737;
+  padding: 0 20px;
+  margin-bottom: .5rem;
+}
+.footer-social-connect
+{
+  display: flex;
+  color: #ffffff;
+  font-size: 18px;
+  margin-top: 10px;
+}
+
+.form-group
+{
+  color: #ffffff;
+  max-width: 50%; 
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+.subscribe-us
+{
+  text-align: center;
+  color: #ffffff;
+  font-size: 18px;
+  position: relative;
+  margin-top: 5px;
+  width: 100%; 
+  justify-content: space-around;
+}
+
+#terms-privacy
+{
+  color: #fff;
 }
